add WalletKeyServiceTest, add CommonServiceTest, add DidDocumentResolverServiceTest, add DidDocumentServiceTest