@@ -21,22 +21,16 @@
 
 package org.eclipse.tractusx.managedidentitywallets.service;
 
-import com.nimbusds.jose.util.JSONObjectUtils;
 import com.smartsensesolutions.java.commons.specification.SpecificationUtil;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.URI;
-import java.nio.charset.StandardCharsets;
 import java.sql.Connection;
 import java.sql.SQLException;
-import java.text.ParseException;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.Collections;
-import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import javax.sql.DataSource;
+import org.eclipse.tractusx.managedidentitywallets.MockUtil;
 import org.eclipse.tractusx.managedidentitywallets.config.MIWSettings;
 import org.eclipse.tractusx.managedidentitywallets.dao.entity.Wallet;
 import org.eclipse.tractusx.managedidentitywallets.dao.repository.HoldersCredentialRepository;
@@ -49,19 +43,7 @@ import org.eclipse.tractusx.managedidentitywallets.exception.ForbiddenException;
 import org.eclipse.tractusx.managedidentitywallets.utils.EncryptionUtils;
 import org.eclipse.tractusx.managedidentitywallets.utils.TestUtils;
 import org.eclipse.tractusx.ssi.lib.crypt.KeyPair;
-import org.eclipse.tractusx.ssi.lib.crypt.x21559.x21559Generator;
-import org.eclipse.tractusx.ssi.lib.exception.InvalidePrivateKeyFormat;
-import org.eclipse.tractusx.ssi.lib.exception.KeyGenerationException;
-import org.eclipse.tractusx.ssi.lib.exception.UnsupportedSignatureTypeException;
-import org.eclipse.tractusx.ssi.lib.model.did.Did;
-import org.eclipse.tractusx.ssi.lib.model.did.DidMethod;
-import org.eclipse.tractusx.ssi.lib.model.did.DidMethodIdentifier;
-import org.eclipse.tractusx.ssi.lib.model.proof.ed21559.Ed25519Signature2020;
 import org.eclipse.tractusx.ssi.lib.model.verifiable.credential.VerifiableCredential;
-import org.eclipse.tractusx.ssi.lib.model.verifiable.credential.VerifiableCredentialBuilder;
-import org.eclipse.tractusx.ssi.lib.model.verifiable.credential.VerifiableCredentialSubject;
-import org.eclipse.tractusx.ssi.lib.proof.LinkedDataProofGenerator;
-import org.eclipse.tractusx.ssi.lib.proof.SignatureType;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
@@ -146,12 +128,13 @@ class WalletServiceTest {
     }
 
     @Nested
-    class createAuthorityWallet{
+    class createAuthorityWallet {
 
         // test !walletRepository.existsByBpn(miwSettings.authorityWalletBpn())
 
-        @Test // logs only stuff, wtf
-        void shouldNotCreateAuthorityWallet(){
+        @Test
+            // logs only stuff, wtf
+        void shouldNotCreateAuthorityWallet() {
             String miwSettingsBpn = TestUtils.getRandomBpmNumber();
             when(miwSettings.authorityWalletBpn()).thenReturn(miwSettingsBpn);
             when(miwSettings.authorityWalletName()).thenReturn("AuthorityWallet");
@@ -159,8 +142,9 @@ class WalletServiceTest {
             assertDoesNotThrow(() -> walletService.createAuthorityWallet());
         }
 
-        @Test // logs only stuff, wtf
-        void shouldCreateAuthorityWallet(){
+        @Test
+            // logs only stuff, wtf
+        void shouldCreateAuthorityWallet() {
             String miwSettingsBpn = TestUtils.getRandomBpmNumber();
             when(miwSettings.authorityWalletBpn()).thenReturn(miwSettingsBpn);
             when(miwSettings.authorityWalletName()).thenReturn("AuthorityWallet");
@@ -168,7 +152,11 @@ class WalletServiceTest {
             when(miwSettings.host()).thenReturn("localhost");
 
             String did = "did:web:random";
-            Wallet createdWallet = mockWallet(miwSettingsBpn, did);
+            Wallet createdWallet = MockUtil.mockWallet(
+                    miwSettingsBpn,
+                    MockUtil.generateDid("random"),
+                    MockUtil.generateKeys()
+            );
             when(createdWallet.getName()).thenReturn("TestWallet");
             when(createdWallet.getId()).thenReturn(42L);
             when(walletRepository.save(any(Wallet.class))).thenReturn(createdWallet);
@@ -188,8 +176,8 @@ class WalletServiceTest {
             when(miwSettings.authorityWalletBpn()).thenReturn(miwSettingsBpn);
             when(miwSettings.host()).thenReturn("localhost");
 
-            String did = "did:web:random";
-            Wallet createdWallet = mockWallet(bpn, did);
+
+            Wallet createdWallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("random"), MockUtil.generateKeys());
             when(createdWallet.getName()).thenReturn("TestWallet");
             when(createdWallet.getId()).thenReturn(42L);
             when(walletRepository.save(any(Wallet.class))).thenReturn(createdWallet);
@@ -197,7 +185,7 @@ class WalletServiceTest {
             WalletKeyRepository walletKeyRepository = mock(WalletKeyRepository.class);
             when(walletKeyService.getRepository()).thenReturn(walletKeyRepository);
 
-            Wallet issuerWallet = mockWallet(bpn, "did:web:random2");
+            Wallet issuerWallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("random2"), MockUtil.generateKeys());
             when(walletRepository.getByBpn(bpn)).thenReturn(issuerWallet);
             Wallet wallet = walletService.createWallet(cwr, callerBpn);
         }
@@ -244,8 +232,8 @@ class WalletServiceTest {
             when(miwSettings.authorityWalletBpn()).thenReturn(miwSettingsBpn);
             when(miwSettings.host()).thenReturn("localhost");
 
-            String did = "did:web:random";
-            Wallet createdWallet = mockWallet(bpn, did);
+
+            Wallet createdWallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("random"), MockUtil.generateKeys());
             when(createdWallet.getName()).thenReturn("TestWallet");
             when(createdWallet.getId()).thenReturn(42L);
             when(walletRepository.save(any(Wallet.class))).thenReturn(createdWallet);
@@ -253,7 +241,7 @@ class WalletServiceTest {
             WalletKeyRepository walletKeyRepository = mock(WalletKeyRepository.class);
             when(walletKeyService.getRepository()).thenReturn(walletKeyRepository);
 
-            Wallet issuerWallet = mockWallet(bpn, "did:web:random2");
+            Wallet issuerWallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("random2"), MockUtil.generateKeys());
             when(walletRepository.getByBpn(bpn)).thenReturn(issuerWallet);
             Wallet wallet = walletService.createWallet(cwr, callerBpn);
         }
@@ -264,14 +252,18 @@ class WalletServiceTest {
 
         @Test
         void shouldReturnWalletWithCredentials() {
+            KeyPair keyPair = MockUtil.generateKeys();
             String bpn = "bpn";
-            VerifiableCredential verifiableCredential = mockCredential(List.of(
-                    "VerifiableCredential",
-                    "LegalParticipant"
-            ));
+            VerifiableCredential verifiableCredential = MockUtil.mockCredential(
+                    List.of("VerifiableCredential"),
+                    List.of(MockUtil.mockCredentialSubject()),
+                    keyPair,
+                    "localhost",
+                    Instant.now().plus(Duration.ofDays(5))
+            );
 
 
-            Wallet wallet = mockWallet(bpn, DID_WEB_LOCALHOST);
+            Wallet wallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("localhost"), keyPair);
 
             // because service returns the !!!entity!!! from the database, the real method has to be called
             doCallRealMethod().when(wallet).setVerifiableCredentials(any(List.class));
@@ -296,14 +288,18 @@ class WalletServiceTest {
 
         @Test
         void shouldReturnWalletWithoutCredentials() {
+            KeyPair keyPair = MockUtil.generateKeys();
             String bpn = "bpn";
-            VerifiableCredential verifiableCredential = mockCredential(List.of(
-                    "VerifiableCredential",
-                    "LegalParticipant"
-            ));
+            VerifiableCredential verifiableCredential = MockUtil.mockCredential(
+                    List.of("VerifiableCredential"),
+                    List.of(MockUtil.mockCredentialSubject()),
+                    keyPair,
+                    "localhost",
+                    Instant.now().plus(Duration.ofDays(5))
+            );
 
 
-            Wallet wallet = mockWallet(bpn, DID_WEB_LOCALHOST);
+            Wallet wallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("localhost"), keyPair);
 
             // because service returns the !!!entity!!! from the database, the real method has to be called
             doCallRealMethod().when(wallet).setVerifiableCredentials(any(List.class));
@@ -330,8 +326,9 @@ class WalletServiceTest {
         // walletBpn != callerBpn
         @Test
         void shouldThrowWhenCallerBPNDoesNotMatchWalletAndAuthorityWallet() {
+            KeyPair keyPair = MockUtil.generateKeys();
             String bpn = "bpn";
-            Wallet wallet = mockWallet(bpn, DID_WEB_LOCALHOST);
+            Wallet wallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("localhost"), keyPair);
             when(miwSettings.authorityWalletBpn()).thenReturn("1234");
             when(commonService.getWalletByIdentifier(any(String.class))).thenReturn(wallet);
             ForbiddenException identifier = assertThrows(
@@ -348,8 +345,9 @@ class WalletServiceTest {
         // walletBpn == callerBpn
         @Test
         void shouldThrowWhenBPNDoesNotMatch() {
+            KeyPair keyPair = MockUtil.generateKeys();
             String bpn = "bpn";
-            Wallet wallet = mockWallet(bpn, DID_WEB_LOCALHOST);
+            Wallet wallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("localhost"), keyPair);
             when(miwSettings.authorityWalletBpn()).thenReturn("1234");
             when(commonService.getWalletByIdentifier(any(String.class))).thenReturn(wallet);
             assertDoesNotThrow(() -> walletService.getWalletByIdentifier(
@@ -366,12 +364,19 @@ class WalletServiceTest {
 
         @Test
         void shouldStoreCredential() {
+            KeyPair keyPair = MockUtil.generateKeys();
             String bpn = "bpn";
-            Wallet wallet = mockWallet(bpn, DID_WEB_LOCALHOST);
+            Wallet wallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("localhost"), keyPair);
             when(commonService.getWalletByIdentifier(any(String.class))).thenReturn(wallet);
 
             Map<String, String> message = assertDoesNotThrow(() -> walletService.storeCredential(
-                    mockCredential(List.of("VerifiableCredential", "LegalParticipant")),
+                    MockUtil.mockCredential(
+                            List.of("VerifiableCredential"),
+                            List.of(MockUtil.mockCredentialSubject()),
+                            keyPair,
+                            "localhost",
+                            Instant.now().plus(Duration.ofDays(5))
+                    ),
                     "identifier",
                     bpn
             ));
@@ -380,103 +385,43 @@ class WalletServiceTest {
 
         @Test
         void shouldNotStoreCredentialWhenNoBPNMatched() {
+            KeyPair keyPair = MockUtil.generateKeys();
             String bpn = "bpn";
-            Wallet wallet = mockWallet("123", DID_WEB_LOCALHOST);
+            Wallet wallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("localhost"), keyPair);
             when(commonService.getWalletByIdentifier(any(String.class))).thenReturn(wallet);
 
             assertThrows(ForbiddenException.class, () -> walletService.storeCredential(
-                    mockCredential(List.of("VerifiableCredential", "LegalParticipant")),
+                    MockUtil.mockCredential(
+                            List.of("VerifiableCredential"),
+                            List.of(MockUtil.mockCredentialSubject()),
+                            keyPair,
+                            "localhost",
+                            Instant.now().plus(Duration.ofDays(5))
+                    ),
                     "identifier",
-                    bpn
+                    bpn+"asd"
             ));
         }
 
         @Test
         void shouldNotStoreCredentialWhenNoTypesContained() {
+            KeyPair keyPair = MockUtil.generateKeys();
             String bpn = "bpn";
-            Wallet wallet = mockWallet(bpn, DID_WEB_LOCALHOST);
+            Wallet wallet = MockUtil.mockWallet(bpn, MockUtil.generateDid("localhost"), keyPair);
             when(commonService.getWalletByIdentifier(any(String.class))).thenReturn(wallet);
 
             assertThrows(BadDataException.class, () -> walletService.storeCredential(
-                    mockCredential(Collections.emptyList()),
+                    MockUtil.mockCredential(
+                            Collections.emptyList(),
+                            List.of(MockUtil.mockCredentialSubject()),
+                            keyPair,
+                            "localhost",
+                            Instant.now().plus(Duration.ofDays(5))
+                    ),
                     "identifier",
                     bpn
             ));
         }
-    }
-
-    private static Wallet mockWallet(String bpn, String did) {
-        Wallet wallet = mock(Wallet.class);
-        when(wallet.getId()).thenReturn(null);
-        when(wallet.getName()).thenReturn(null);
-        when(wallet.getBpn()).thenReturn(bpn);
-        when(wallet.getDid()).thenReturn(did);
-        when(wallet.getDidDocument()).thenReturn(null);
-        when(wallet.getAlgorithm()).thenReturn("Ed25519");
-        when(wallet.getCreatedAt()).thenReturn(new Date());
-        when(wallet.getModifiedAt()).thenReturn(new Date());
-        when(wallet.getModifiedFrom()).thenReturn(null);
-        return wallet;
-    }
-
-    private static VerifiableCredential mockCredential(List<String> types) {
-
-        Did issuer = new Did(new DidMethod("web"), new DidMethodIdentifier("localhost"), null);
-        final VerifiableCredentialBuilder builder =
-                new VerifiableCredentialBuilder()
-                        .context(List.of(
-                                URI.create("https://www.w3.org/2018/credentials/v1"),
-                                URI.create(
-                                        "https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#")
-                        ))
-                        .id(URI.create(issuer + "#key-1"))
-                        .issuer(issuer.toUri())
-                        .issuanceDate(Instant.now())
-                        .credentialSubject(mockCredentialSubject())
-                        .expirationDate(Instant.now().plus(Duration.ofDays(5)))
-                        .type(types);
-
-        // Ed25519 Proof Builder
-        final LinkedDataProofGenerator generator;
-        try {
-            generator = LinkedDataProofGenerator.newInstance(SignatureType.ED21559);
-        } catch (UnsupportedSignatureTypeException e) {
-            throw new AssertionError(e);
-        }
-
-        x21559Generator gen = new x21559Generator();
-        KeyPair keyPair;
-        try {
-            keyPair = gen.generateKey();
-        } catch (KeyGenerationException e) {
-            throw new AssertionError(e);
-        }
-
-        final Ed25519Signature2020 proof;
-        try {
-            proof = (Ed25519Signature2020)
-                    generator.createProof(builder.build(), URI.create(issuer + "#key-1"), keyPair.getPrivateKey());
-        } catch (InvalidePrivateKeyFormat e) {
-            throw new AssertionError(e);
-        }
-
-        // Adding Proof to VC
-        builder.proof(proof);
-
-        return builder.build();
-    }
-
-
-    private static VerifiableCredentialSubject mockCredentialSubject() {
-        Map<String, Object> subj;
-        try (InputStream in = WalletServiceTest.class.getResourceAsStream("/credential-subject.json")) {
-            subj = JSONObjectUtils.parse(new String(in.readAllBytes(), StandardCharsets.UTF_8));
-        } catch (IOException | ParseException e) {
-            throw new RuntimeException(e);
-        }
-
-
-        return new VerifiableCredentialSubject(subj);
     }
 
 
